Tue Apr 11 13:13:27 UTC 2006  Simon McQueen  <sm@prismtech.com>

        * tao/Utils/Servant_Var.h:
        * tao/Utils/Servant_Var.inl:

          Add ACE_LACKS_MEMBER_TEMPLATES guards around problematic equality
          operators.

Mon Apr 10 18:42:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Event/Mcast/Simple/Simple.mpc:

          Fixed the 'after' setting in the client project.

Mon Apr 10 16:21:40 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * orbsvcs/examples/ImR/Advanced/TestServer.cpp:

          Trying to fix another compiler error in ICC 9.0 Windows
          64-bit build.

Mon Apr 10 14:50:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2377_Regression/Hello.cpp:
        * orbsvcs/orbsvcs/Log/Log_i.cpp:
          Fixed conversion warnings in vxworks build

Mon Apr 10 10:13:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/interface.idl:
          Added some extra test cases which where reported by Hans Bos
          <hans dot bos at xelion dot nl> as not working with 1.4.4 but
          they are now working with cvs head.

Mon Apr 10 06:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/extra_core.mpb:
        * tao/tao.mpc:
          Moved ServerRequestInterceptor_Adapter.cpp and
          ClientRequestInterceptor_Adapter.cpp from extra_core to tao
          to fix link errors in vc minimum build

Fri Apr  7 19:54:44 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * tao/Connection_Handler.cpp:
        * tao/Resume_Handle.h:
        * tao/Resume_Handle.cpp:

          Back out the changes I put a week ago since they didn't help
          resovle a race condition.
          Mon Mar 27 18:55:51 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

Fri Apr  7 09:12:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Log/Basic_Log_Test/Basic_Log_Test.cpp: